# dailyjournalapp

./: README.md  pyproject.toml
dailyjournalapp/: daily_workout.json  journalapp.py  poetry_prompts.py
dailyjournalapp/daily_notes/: dailynote_2023-7-28.md  dailynote_2023-7-30.md  dailynote_2023-8-1.md
dailyjournalapp/data/: chores.json  daily_workout.json  procgen_tarot.json  projects_status.json
